[package]
name = "panic-test"
version = "0.1.0"
authors = ["Pierre Laas <lanklaas123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper={version="*", features=["client","server","http1","tcp"]}
tokio={version="*",features=["fs","rt-multi-thread"]}
multipart={version="*",default-features = false,features=["server"]}